--- a/index.ipynb
+++ b/index.ipynb
@@ -1195,7 +1195,8 @@
     }
    ],
    "source": [
-    "plt.scatter(df.play_star_rating, df.star_rating)"
+    "plt.scatter(df.play_star_rating, df.star_rating)\n",
+    "plt."
    ]
   },
   {
