Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1197,7 +1197,7 @@
    "source": [
     "plt.scatter(df.play_star_rating, df.star_rating)\n",
     "plt.title('Star Ratings of Lego Sets', fontsize=20)\n",
-    "plt.xlabel"
+    "plt.xlabel()"
    ]
   },
   {
